--- a/src/global.scss
+++ b/src/global.scss
@@ -17,15 +17,22 @@ a {
   text-decoration: none;
 }
 
-.container {
+.global-container {
   margin: 0 auto;
   padding: 20px;
   max-width: 1620px;
   background-color: #f5f7f8;
 }
 
-.global-header2 {
+h1, h2 {
   text-align: center;
-  margin-bottom: 24px;
-  margin-top: 14px;
+}
+
+.global-header-2 {
+  margin: 24px auto;
+}
+
+.global-error-message {
+  text-align: center;
+  color: lightcoral;
 }
