--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .header {
     padding: 14px;
     text-align: center;
-    background: #0058AB;
+    background: #0058ab;
     display: flex;
     align-items: center;
     justify-content: space-between;
