--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,18 +6,24 @@
     align-items: center;
     justify-content: space-between;
 
-    p {
-        margin: 0;
-    }
-
     .logo {
         color: white;
         font-weight: bold;
+
+        img {
+            height: 42px;
+            width: auto;
+            margin-right: 10px;
+        }
+
+        p {
+            margin: 0;
+        }
     }
 
     .avatar {
-        height: 36px;
-        width: 36px;
+        height: 42px;
+        width: 42px;
         border-radius: 50%;
     }
 }
