--- a/src/components/ProductItem/ProductItem.module.scss
+++ b/src/components/ProductItem/ProductItem.module.scss
@@ -8,6 +8,10 @@
         text-align: center;
     }
 
+    .loading-message {
+        text-align: center;
+    }
+
     .sale-form {
         margin-top: 20px;
         display: flex;
